--- a/src/styles.css
+++ b/src/styles.css
@@ -1,32 +1,55 @@
-div.tempBox {
+body {
+    text-align: center;
+    background-color: rgb(23, 40, 54);
+    color: rgb(255, 253, 251);
+}
+
+h1 {
+    flex: content;
+
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+/* h3 {
+    text-align: center;
+} */
+
+div.main-div {
     text-align: center;
 }
 
-.tempBox {
-    /* position: relative; */
-    text-align: center;
+.btn {
+    padding: 0.6rem 3.3rem;
+    min-width: 83%;
+    margin: 1.3% auto 1.3%;
+    border: none;
+    border-radius: 0.3rem;
+    font-size: 1.3rem;
+    font-family: Helvetica, serif;
+    font-weight: 100;
+}
+
+.btn:hover {
+    background-color: rgb(152, 190, 190);
+    box-shadow: 0.1rem 0.1rem #0d0f0f;
+    background-color: rgb(7, 7, 22);
+    color: rgb(255, 247, 240);
 
 }
 
-
-h3 {
-    font-size: 3rem;
-    font-family: sans-serif;
-
+.question {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 3.3rem;
 }
 
-button {
-    font-size: 3rem;
-    margin: 1%;
-    padding: 2rem 3rem;
-    border-radius: 1.3rem;
-    border-style: none;
-    box-shadow: 5px 3px #888888;
+.quiz-box {
+    display: inline-block;
+    /* justify-content: center; */
+    padding: 3% 9% 6%;
+    background-color: #1d1f1f;
 }
 
-button:hover {
-    background-color: aliceblue;
-    text-decoration-color: rgb(44, 46, 48);
-
-    box-shadow: 3px 3px 3px 3px rgb(97, 113, 122);
+.result {
+    margin-top: 5%;
+    font-family: monospace;
 }
