--- a/src/styles.css
+++ b/src/styles.css
@@ -16,11 +16,12 @@ h1 {
 
 div.main-div {
     text-align: center;
+
 }
 
 .btn {
     padding: 0.6rem 3.3rem;
-    min-width: 83%;
+    min-width: 103%;
     margin: 1.3% auto 1.3%;
     border: none;
     border-radius: 0.3rem;
@@ -47,9 +48,58 @@ div.main-div {
     /* justify-content: center; */
     padding: 3% 9% 6%;
     background-color: #1d1f1f;
+    width: 43%;
 }
 
 .result {
     margin-top: 5%;
     font-family: monospace;
+}
+
+.span {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: small;
+    position: relative;
+    bottom: 560px;
+    left: 333px;
+    color: rgb(162, 168, 173);
+}
+
+.span span {
+    color: rgb(255, 249, 249);
+}
+
+.retake {
+    margin-top: 3rem;
+    background-color: transparent;
+    color: aliceblue;
+    border: solid;
+    border-radius: 0.3rem;
+    border-width: 0.003rem;
+    padding: 1.1rem 1.6rem;
+    font-size: 0.9rem;
+
+}
+
+.score {
+    margin-top: 6rem;
+    text-align: center;
+    font-family: monospace;
+}
+
+.startBtn {
+    padding: 0.8rem 1.1rem;
+    border-color: white;
+    background-color: transparent;
+    color: rgb(249, 251, 253);
+    border-radius: 0.3rem;
+    font-weight: 700;
+    letter-spacing: 0.03rem;
+}
+
+.startBtn:hover {
+    color: rgb(27, 28, 29);
+    background-color: white;
+    /* box-shadow: 3px 3px 6px 6px rgb(111, 114, 117); */
+
 }
