--- a/src/styles/quiz.css
+++ b/src/styles/quiz.css
@@ -1,24 +1,3 @@
-body {
-    text-align: center;
-    background-color: rgb(23, 40, 54);
-    color: rgb(255, 253, 251);
-}
-
-h1 {
-    flex: content;
-
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-/* h3 {
-    text-align: center;
-} */
-
-div.main-div {
-    text-align: center;
-
-}
-
 .btn {
     padding: 0.6rem 3.3rem;
     min-width: 103%;
@@ -60,7 +39,7 @@ div.main-div {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: small;
     position: relative;
-    bottom: 560px;
+    bottom: 490px;
     left: 333px;
     color: rgb(162, 168, 173);
 }
@@ -95,6 +74,7 @@ div.main-div {
     border-radius: 0.3rem;
     font-weight: 700;
     letter-spacing: 0.03rem;
+    margin-top: 3rem;
 }
 
 .startBtn:hover {
